hphp/test/zend/good/ext/gd/tests/colorclosest.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!function_exists('imagecolorclosest')) die("skip gd extension not available\n");
}
